@@ -71,10 +71,6 @@
             <url>http://repo.mcstats.org/content/repositories/public</url>
         </repository>
         <repository>
-            <id>diablodrops-repo</id>
-            <url>https://diabloplugins.ci.cloudbees.com/job/DiabloDrops/</url>
-        </repository>
-        <repository>
             <id>nuclearw-repo</id>
             <url>http://repo.nuclearw.com/</url>
         </repository>
@@ -95,13 +91,6 @@
             <groupId>org.mcstats.bukkit</groupId>
             <artifactId>metrics</artifactId>
             <version>R7</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>DiabloDrops</groupId>
-            <artifactId>DiabloDrops</artifactId>
-            <version>2.5.1</version>
-            <type>jar</type>
             <scope>compile</scope>
         </dependency>
         <dependency>
