@@ -3,7 +3,7 @@ version: ${project.version}-b${BUILD_NUMBER}
 author: TfT_02
 main: com.me.tft_02.soulbound.Soulbound
 description: Soulbound items for your RPG servers!
-softdepend: [DiabloDrops, EpicBossRecoded, LoreLocks, MythicDrops]
+softdepend: [EpicBossRecoded, LoreLocks, MythicDrops]
 commands:
    soulbound:
       description: Usage /soulbound
